saves/test/demo_full_20240802_193545/2012_q1g/TBgen_codes/run_info.txt
iverilog simulation passed!

iverilog cmd 1:
~/iverilog/bin/iverilog -g2012 -o run.vvp 2012_q1g_tb.v 2012_q1g.v 
iverilog cmd 1 output:

iverilog cmd 1 error:

iverilog cmd 2:
~/iverilog/bin/vvp run.vvp
iverilog cmd 2 output:
2012_q1g_tb.v:108: $finish called at 16000 (1ps)

iverilog cmd 2 error:

